@@ -1,103 +1,76 @@
-# AegisOS v0.1
+# AegisOS
 
-A secure, distributed operating-system runtime over a private peer-to-peer network.
-Every node is identical and autonomous; there is no central server. Nodes discover each
-other, agree on shared state, store files redundantly, and run jobs that survive machine
-failure.
+AegisOS is a decentralized compute and storage runtime written in Java. It combines distributed execution, consensus-backed metadata, and autonomous failure recovery into a single, cohesive operating system layer.
 
-## Status
+Unlike traditional orchestrators that rely on central control planes, AegisOS nodes operate collectively. You can submit an artifact to any node, and the cluster will dynamically schedule it, execute it, and preserve its state—even as nodes join, fail, or leave the network.
 
-v0.1 MVP. Built phase-by-phase from cryptographic identity up through process migration.
+## Table of Contents
+- [System Capabilities](#system-capabilities)
+- [Theory and Architecture](#theory-and-architecture)
+- [Architecture Modules](#architecture-modules)
+- [Available Commands & Services](#available-commands--services)
+- [Documentation](#documentation)
 
-## Modules
+## System Capabilities
 
-| Module | Responsibility |
-| --- | --- |
-| `aegis-core` | Shared types, Ed25519/X25519/AES-GCM crypto, identity, protobuf wire schema |
-| `aegis-network` | Authenticated, encrypted transport (handshake + AES-256-GCM channel) |
-| `aegis-discovery` | Gossip membership + Kademlia DHT routing |
-| `aegis-consensus` | Raft leader election, log replication, cluster state machine |
-| `aegis-fs` | Content-addressed, encrypted, self-healing distributed file system |
-| `aegis-scheduler` | Resource reporting + weighted least-loaded job placement |
-| `aegis-runtime` | Job execution, checkpointing, process migration |
-| `aegis-api` | Public OS-like API (file system, process manager, cluster info) |
-| `aegis-node` | Boots and wires all layers into one JVM process |
-| `aegis-cli` | The `aegis` command-line interface |
-| `aegis-test-cluster` | In-process multi-node integration + chaos tests |
+AegisOS v1.0.0 is capable of the following distributed operations:
 
-## Requirements
+* **Native Artifact Execution:** Dynamically distribute and execute standard Java `.jar` binaries across a network of physical machines without external container runtimes.
+* **Hardware-Aware Load Balancing:** Automatically measure and evaluate physical JVM heap limits (`maxMemory`) and CPU cores, routing workloads only to nodes with verified capacity to prevent OS-level Out-Of-Memory (OOM) crashes.
+* **Cryptographic Workload Routing:** Securely map workloads to nodes using stable 32-byte cryptographic hashes (`NodeId`) derived from Ed25519 public keys, completely eliminating split-brain scheduling collisions.
+* **Distributed Stream Multiplexing:** Live-stream `stdout` and `stderr` from a remote executing process back to the original submitter's CLI, chunked and multiplexed over the core TCP transport layer.
+* **Autonomous Garbage Collection:** Automatically detect hard node crashes or network partitions via Gossip protocol timeouts, forcefully transitioning orphaned "Ghost Workloads" to a safe failure state.
+* **Asynchronous State Mutations:** Process hundreds of state transitions concurrently via a reactive, lock-free Pub/Sub event bus that never blocks the underlying Raft consensus engine.
 
-- JDK 21+ (uses virtual threads)
-- Maven 3.9+
-- Network access to Maven Central for the protobuf `protoc` artifact on first build
+## Theory and Architecture
 
-## Build
+AegisOS is built on the philosophy of a "single system image" where a network of independent nodes forms a seamless, cohesive operating system. It moves away from the master-worker paradigm in favor of a fully symmetric, leaderless (from the client's perspective) architecture. 
 
-```bash
-mvn -q clean package
-```
+Under the hood, AegisOS relies on a combination of distributed systems primitives:
+1. **Raft Consensus:** Guarantees strong consistency for the global state (metadata, job scheduling, filesystem records).
+2. **Gossip Protocol:** Provides scalable, eventually-consistent topology discovery and hardware telemetry sharing without overloading the consensus leader.
+3. **Kademlia-inspired Routing:** Leverages cryptographic node identities (`NodeId`) for stable and deterministic network addressing.
+4. **Reactive Event Loop:** Separates the fast, synchronous consensus log from the slow, physical realities of process execution using asynchronous Pub/Sub buses.
 
-Protobuf sources under `aegis-core/src/main/proto` are compiled by the
-`protobuf-maven-plugin` during the build.
+## Architecture Modules
+* `aegis-consensus`: Raft-based distributed state machine.
+* `aegis-discovery`: Gossip protocol for eventually-consistent peer topology and hardware telemetry.
+* `aegis-network`: Multiplexed TCP transport layer with Virtual IPC streaming.
+* `aegis-fs`: Distributed file system for immutable artifact storage.
+* `aegis-runtime`: The physical OS process supervisor and scheduling daemon.
 
-## Run a node locally
+## Available Commands & Services
 
-By default, AegisOS uses `~/.aegis` as the home directory. To run multiple nodes on the same machine, you must give each node a unique home directory and port.
+The AegisOS CLI exposes a rich set of commands to interact with the cluster:
 
-**Node 1 (Seed)**:
-```bash
-java -XX:+UseZGC -jar aegis-cli/target/aegis.jar start --home node1 --port 9001
-```
+### Node & Cluster Management
+* `start`: Start an AegisOS node in the current process.
+* `info`: Show the local node's cryptographic identity and configuration.
+* `nodes`: List all currently alive nodes discovered via Gossip.
+* `leader`: Identify the current Raft consensus leader.
+* `health`: Show detailed health status of all internal subsystems (Raft, Gossip, Storage).
+* `cluster-health`: Show aggregated cluster-wide health.
+* `admin`: Manage cluster administration tasks (e.g., forcing a leader step-down).
 
-**Node 2**:
-```bash
-java -jar aegis-cli/target/aegis.jar start --home node2 --port 9002 --seed 127.0.0.1:9001
-```
+### Distributed File System (AegisFS)
+* `put`: Upload a local file into the distributed file system.
+* `get`: Download a file from the cluster to the local machine.
+* `ls`: List files currently stored and replicated in the cluster.
 
-**Node 3**:
-```bash
-java -jar aegis-cli/target/aegis.jar start --home node3 --port 9003 --seed 127.0.0.1:9001
-```
+### Artifacts & Execution
+* `artifact upload`: Securely upload a `.jar` binary artifact for cluster execution.
+* `artifact list`: List available executable artifacts in the registry.
+* `process submit` (or `run`): Submit a new job to the cluster scheduler with specific CPU and memory requirements.
+* `process status` (or `status`): Check the real-time state of a submitted job (`PLACED`, `RUNNING`, `COMPLETED`, `FAILED`).
+* `process list` (or `jobs`): List all running and historical processes.
+* `process cancel`: Forcefully terminate an executing process across the network.
+* `logs`: Connect to the Virtual IPC overlay to stream live `stdout`/`stderr` from an executing remote process.
 
-## CLI
+### Resource Allocation
+* `allocator`: Manage and inspect the distributed resource allocator.
 
-```text
-aegis info                         # show this node's identity
-aegis start [--port N] [--seed h:p]# run a node
-aegis nodes --seed h:p             # list cluster members
-aegis put <local> <path> --seed h:p
-aegis get <path> <local> --seed h:p
-aegis ls [path] --seed h:p
-aegis run <JobClass> [args...] --seed h:p
-aegis status <jobId> --seed h:p
-```
-
-_Note: CLI commands run as ephemeral clients that connect to the cluster, execute the command, and exit without joining the Raft voting quorum._
-
-## Tests
-
-```bash
-mvn -q test
-```
-
-Phase gate tests live in `aegis-test-cluster` (`Phase1Test` .. `Phase6Test`) and spin up
-real in-process clusters.
-
-### Local End-to-End Test Script
-
-A PowerShell script is included to automatically test cluster resilience against transient client operations and node failures:
-
-```powershell
-powershell -ExecutionPolicy Bypass -File test_client_quorum.ps1
-```
-
-This script:
-1. Starts a 3-node local cluster.
-2. Runs 6 rapid CLI operations (`put` and `get`), creating transient clients.
-3. Kills Node 3 to test failover and leader election.
-4. Verifies the cluster still accepts `put` and `get` operations.
-
-## Design
-
-See [DetailAndPlanning.md](DetailAndPlanning.md) for the full design and
-[docs/](docs/) for focused notes on Raft, gossip, and the security model.
+## Documentation
+* [Getting Started Guide](getting_started.md)
+* [Internal Workings & Subsystem Mechanics](docs/architecture/internal_workings.md)
+* [The Execution Loop](docs/architecture/execution_loop.md)
+* [Changelog](CHANGELOG.md)
